# syncbox

./: .gitignore  Cargo.toml  ORIGINALDESIGN.md  README.md
docs/: SYNCBOX_DESIGN.md
src/: main.rs
src/application/: use_cases.rs
src/domain/: errors.rs  mod.rs  repositories.rs  todo.rs
src/infrastructure/repositories/: in_memory.rs
src/presentation/: http.rs
