[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and async runtime
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Domain utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }

# For testing HTTP routes
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"
